Revision history for Perl extension Win32::Setupsup.

1.10  NOT
	- port to Strawberry Perl
	- fix refresh parameter in WaitForWindowClose (was ignored)


1.03  November 11, 2011
	- use Win32API::Registry instead of Win32::Registry
	- use XSLoader instead of DynaLoader


1.02  November 5, 2011
	- now maintained by Christopher J. Madsen <perl@cjmweb.net>
	- install with normal "perl Makefile.PL ; nmake ; nmake install"
	- now requires at least Perl 5.6


1.01  October 15, 2000
	- contains version information
	- supports Perl 5.6
	- ready to install via PPM


1.00  January 20, 1999
	- original version by Jens Helberg <jens.helberg@de.bosch.com>
	- contains some calls to remote control Windows applications